# cell_counter

./: .gitignore  Dockerfile  app.dockerfile  pyproject.toml  requirements.txt
cell_counter/: app.py
