[project]
name = "cell-counter"
version = "1.0.0"
description = "Counts the cell nuclei in an image"
authors = [
    {name = "Matthew Hung",email = "matthew.k.hung@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit (>=1.42.0,<2.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "plotly (>=6.0.0,<7.0.0)"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

